Added modules for w20 fragments

--- a/rest/src/main/resources/org/seedstack/w20/masterpage.html
+++ b/rest/src/main/resources/org/seedstack/w20/masterpage.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>${applicationTitle}</title>
-    <script type="text/javascript" data-main="${componentsPath}/w20/core/modules/w20.js?__v=${applicationVersion}" src="${componentsPath}/requirejs/require.js?__v=${applicationVersion}"></script>
+    <script type="text/javascript" data-main="${componentsPath}/w20/modules/w20.js?__v=${applicationVersion}" src="${componentsPath}/requirejs/require.js?__v=${applicationVersion}"></script>
 </head>
 <body>
 <div id="w20-loading-cloak">
